--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "@types/cors": "^2.8.7",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "date-fns": "^2.12.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "express": "^4.17.1",
+    "express-async-error": "^0.0.2",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "pg": "^8.0.3",
